fix: change z-index statistic

--- a/src/stylesheets/game-sprint/style.scss
+++ b/src/stylesheets/game-sprint/style.scss
@@ -44,7 +44,7 @@
     top: 50%;
     text-align: center;
     background: whitesmoke;
-    max-width:750px;
+    max-width: 565px;
     width: 100%;
     height: auto;
     margin: -150px auto 0;
@@ -60,7 +60,6 @@
     line-height: 1;
     margin-bottom: 60px;
     color: rgba(36, 5, 71, 0.57);
-    opacity: 0.8;
     text-transform: uppercase;
     -webkit-font-smoothing: antialiased;
     letter-spacing: 13px;
@@ -73,7 +72,6 @@
     line-height: 18px;
     font-weight: 500;
     color: rgb(31, 8, 138);
-    opacity: 0.8;
   }
 
   .level-select {
@@ -83,19 +81,27 @@
     line-height: 1;
     margin-bottom: 60px;
     color: rgba(48, 2, 100, 0.57);
-    opacity: 0.9;
+    opacity: 1;
     text-transform: uppercase;
     -webkit-font-smoothing: antialiased;
     letter-spacing: 5px;
   }
 
-  .start {
-    width: 120px;
-    margin: 10px;
+.level-block {
+  margin: 5px auto;
+  max-width: 500px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+ .level-block .start {
+    width: 15%;
   }
 
   .learn-words {
-    width: 190px !important;
+    width: 170px !important;
   }
 
   .material-icons.md-correct {
@@ -151,8 +157,7 @@
   }
 
   .btn {
-    width: 100px;
-    height: 40px;
+    width: 15%;
     background-color: #f85307;
     &:hover {
       background-color: #09f1d2;
@@ -310,7 +315,6 @@
     margin: -5px 40px;
     border-radius: 10px;
     width: 100px;
-    height: 40px;
     background: rgba(146, 85, 215, 0.57);
     border-color: rgba(146, 85, 215, 0.57);
     opacity: 1;
@@ -381,6 +385,7 @@
     border-radius: 10px;
     background-color: rgba(252, 249, 249, 0.747);
     margin: 100px auto 0;
+    z-index: 100000;
   }
 
   .statistic {
